# bot-security-news

./: .env.example  .gitignore  README.md  config.yaml  pyproject.toml  setup_scheduler.py
bot_security_news/: cli.py  config.py  http_client.py  models.py  publisher.py  report.py  scoring.py  store.py  telegram.py
bot_security_news/collectors/: __init__.py  cisa.py  epss.py  nvd.py  rss.py
docs/: index.html  reports.json
docs/reports/: 2026-06-20.html  2026-06-21.html  2026-06-22.html  2026-06-23.html
tests/: test_nvd.py  test_report.py  test_rss.py  test_scoring.py  test_store.py  test_telegram.py  test_urgent.py
