[build-system]
requires = ["setuptools>=68"]
build-backend = "setuptools.build_meta"

[project]
name = "bot-security-news"
version = "0.1.0"
description = "Daily high-signal cybersecurity digest sent to Telegram."
readme = "README.md"
requires-python = ">=3.11"
dependencies = [
    "feedparser>=6.0.11",
    "httpx>=0.27.0",
    "python-dotenv>=1.0.1",
    "PyYAML>=6.0.1",
    "rich>=13.7.0",
    "typer>=0.12.0",
]

[project.optional-dependencies]
dev = [
    "pytest>=8.2.0",
    "respx>=0.21.0",
]

[project.scripts]
bot-security-news = "bot_security_news.cli:app"

[tool.setuptools.packages.find]
include = ["bot_security_news*"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"
